--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link type="text/css" rel="stylesheet" href="style.css">
     </head>
     <body>
 
