change the view

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
     </head>
     <body>
 
-        <div class="title"></div>
+        <div class="title">
+            <span class="prefix"></span>
+            <span class="distance"></span>
+        </div>
 
         <div class="calenders">
 
